client/src/styles/repo.css
@import 'vars.css';

.repos {
    display: flex;
    flex-direction: column;
    min-height: 100%;
    padding-bottom: calc(4 * var(--unit));
}

.repo {
    display: flex;
    flex-direction: column;
    gap: calc(var(--unit) / 2);
    padding: var(--unit);
}

.repo:hover {
    background-color: #00000011;
}

.repo .repo-title {
    display: flex;
    flex-wrap: wrap;
    gap: calc(var(--unit) / 2);
}

.repo .repo-title .repo-name {
    margin: 0;
    overflow: hidden;
    text-overflow: ellipsis;
}

.repo .repo-title .repo-markers {
    display: flex;
    gap: calc(var(--unit) / 2);
}

.repo .repo-title .repo-markers .repo-marker {
    display: flex;
    align-items: center;
    gap: calc(var(--unit) / 4);
}

.repo .repo-title .repo-markers .repo-marker.archived {
    font-weight: bold;
    opacity: .2;
}

.repo .repo-title .repo-button {
    margin-left: auto;
}

.repo .repo-description {
    display: -webkit-box;
    line-clamp: 4;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

